# ai_oral_boards

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  event.json  response.json  s3-public-policy.json
frontend/: .eslintrc.json  case.html  dicomviewer.html  eslint.config.mjs  index.html  package-lock.json  package.json  styles.css  upload.html
frontend/js/: case.js  main.js  upload.js
src/: api.rs  db.rs  dicom.rs  http_handler.rs  main.rs  models.rs  routes.rs  s3.rs  telemetry.rs
tests/: integration-tests.rs
