[package]
name = "radiology-teaching-files"
version = "0.1.0"
edition = "2021"

# Including frontend files in the package
[package.metadata.lambda.deploy]
additional-files = [
    { source = "frontend", destination = "frontend" }
]

[dependencies]
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
log = "0.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
base64 = "0.21.4"
chrono = { version = "0.4", features = ["serde"] }
dicom-object = "0.5.0"
anyhow = "1.0"
http = "0.2"
tempfile = "3.8.0"
# reqwest = { version = "0.11", features = ["json"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
ring = "0.17"
aws-xray-sdk = "0.8"

# For AWS SDK with rustls
aws-config = { version = "0.56", default-features = false, features = ["rustls"] } 
aws-sdk-dynamodb = { version = "0.33", default-features = false, features = ["rustls"] }
aws-sdk-s3 = { version = "0.33", default-features = false, features = ["rustls"] }

# Optimize for Lambda deployment
[profile.release]
strip = true        # Strip debug symbols
opt-level = "s"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Further improve optimization